# climate-change

./: .gitignore  Makefile  README.md  climate-change.code-workspace  pyproject.toml  pyrightconfig.json
climate_change/analysis/: clean_data.ipynb  intermediate_data.ipynb
climate_change/berlin/analysis/: clean_data.ipynb  projections.ipynb
climate_change/berlin/modelling/: feature_selection.ipynb
climate_change/berlin/modelling/all_variables/: all_variables.ipynb  all_variables_extended.ipynb
climate_change/berlin/modelling/all_variables/demo/: XGBoost-Station105.pickle  feature_selection.ipynb  feature_selection.py
climate_change/berlin/modelling/variables_with_projection/: variables_with_projection.ipynb
climate_change/berlin/preprocessing/: data_integration.ipynb  doc_toc.ipynb  raw_data.ipynb
climate_change/berlin/projections/: projections.ipynb
climate_change/modeling/: NeuralNetwork.sqlite3  RandomForest.sqlite3  all_variables.ipynb  subset_variables_with_prediction.ipynb  variables_with_prediction.ipynb
climate_change/modeling/variables_with_prediction/: LGBM.sqlite3  NeuralNetwork.sqlite3  XGBoost.sqlite3
climate_change/preprocessing/: raw_data.ipynb
climate_change/projections/: LGBM.sqlite3  NeuralNetwork.sqlite3  XGBoost.sqlite3  extraction.ipynb
climate_change/tarragona/analysis/: clean_data.ipynb  intermediate_data.ipynb  outliers.ipynb  projections.ipynb
climate_change/tarragona/modeling/: subset_variables_with_prediction.ipynb
climate_change/tarragona/modeling/all_variables/: LGBM.sqlite3  NeuralNetwork.sqlite3  XGBoost.sqlite3
climate_change/tarragona/modeling/variables_with_prediction/: variables_with_prediction.ipynb
climate_change/tarragona/preprocessing/: solar_radiation.ipynb
climate_change/tarragona/projections/: XGBoost.sqlite3  analysis.ipynb  extraction.ipynb  projections.ipynb
climate_change/tarragona/trials/: abs_peak.ipynb  future_data.ipynb
