[tool.poetry]
name = "climate-change"
version = "0.1.0"
description = "SafeCREW task 4.1"
authors = ["Massimiliano Arca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
jupyter = "^1.0.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
jupyterlab = "^4.0.8"
openpyxl = "^3.1.2"
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "^5.12.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"
mypy = "^1.6.1"
bng-latlon = "^1.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
jpype1 = "^1.5.0"
sktime = "^0.26.0"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
