[tool.poetry]
name = "climate-change"
version = "0.1.0"
description = "SafeCREW task 4.1"
authors = ["Massimiliano Arca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
jupyter = "^1.0.0"
pandas = "<2.2.0"
jupyterlab = "^4.0.8"
openpyxl = "^3.1.2"
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "^5.12.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"
mypy = "^1.6.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
jpype1 = "^1.5.0"
statsmodels = "^0.14.1"
scikit-learn = "1.3.0"
pyarrow = "^15.0.0"
dtaidistance = "^2.3.11"
scikit-posthocs = "^0.9.0"
patsy = "^0.5.6"
optuna = "^3.5.0"
optuna-dashboard = "^0.15.0"
sklearn-quantile = "^0.0.29"
quantile-forest = "^1.3.4"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
mapie = "^0.8.3"
xarray = "^2024.2.0"
numpy = "<1.25.0"
setuptools = "^69.2.0"
shap = "^0.45.0"
pingouin = "^0.5.4"
pyright = "^1.1.359"
plotly = "^5.21.0"
googletrans = "3.1.0a0"
prophet = "^1.1.5"
netcdf4 = "^1.7.1.post1"
cdsapi = "^0.7.0"
dowhy = "^0.11.1"
rpy2 = "^3.5.16"
dask = "^2024.7.0"
geopandas = "^1.0.1"
pymannkendall = "^1.4.3"
pmdarima = "^2.0.4"
kaleido = "0.2.1"
jupyter-contrib-nbextensions = "^0.7.0"
streamlit = "^1.37.1"
networkx = "^3.3"
torch = "^2.5.1"
neuralforecast = "^1.7.5"
datasetsforecast = "^0.0.8"
hyperopt = "^0.2.7"
quantnn = "^0.0.5"
torchvision = "^0.20.1"
tensorboard = "^2.18.0"


[tool.poetry.group.dev.dependencies]
pandas = "<2.2.0"
deptry = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 72